# blurfaces

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  blur_faces.py  blurfaces.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
