[project]
name = "blurfaces"
version = "0.2.0"
description = "Detect and censor faces in video using insightface and ffmpeg"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "insightface>=0.7.3",
    "numpy>=1.26",
    "onnxruntime>=1.19",
    "opencv-python-headless>=4.10",
    "tqdm>=4.66",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.19"]

[project.scripts]
blurfaces = "blurfaces:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["blurfaces.py"]
